[gd_scene load_steps=9 format=3 uid="uid://btq3opu7jlaxs"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_csjvd"]
[ext_resource type="Texture2D" uid="uid://cb0su7g7i3yll" path="res://assets/art/frog1.png" id="3_ejbcv"]
[ext_resource type="Texture2D" uid="uid://cdr2f584xfo60" path="res://assets/art/frog2.png" id="4_y0tot"]
[ext_resource type="Texture2D" uid="uid://bcqkaou714cor" path="res://assets/art/frog3.png" id="5_a1y0c"]
[ext_resource type="AudioStream" uid="uid://clp8y4on0gu6l" path="res://assets/audio/frog.wav" id="6_gwacp"]

[sub_resource type="SpriteFrames" id="SpriteFrames_io58n"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_ejbcv")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_ejbcv")
}, {
"duration": 1.0,
"texture": ExtResource("4_y0tot")
}, {
"duration": 1.0,
"texture": ExtResource("5_a1y0c")
}, {
"duration": 1.0,
"texture": ExtResource("4_y0tot")
}, {
"duration": 1.0,
"texture": ExtResource("3_ejbcv")
}],
"loop": false,
"name": &"hop",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_vtoxv"]
radius = 16.0

[sub_resource type="CircleShape2D" id="CircleShape2D_5kopp"]
radius = 16.0

[node name="Player" type="CharacterBody2D" groups=["Frog"]]
process_mode = 1
z_index = 15
z_as_relative = false
collision_mask = 16395
script = ExtResource("1_csjvd")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_io58n")
animation = &"hop"
frame = 4
frame_progress = 1.0

[node name="HomeCollider" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_vtoxv")

[node name="DeathCollider" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16394

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathCollider"]
shape = SubResource("CircleShape2D_5kopp")

[node name="Audio" type="Node" parent="."]

[node name="WinAudio" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("6_gwacp")

[connection signal="body_entered" from="DeathCollider" to="." method="_on_death_collider_body_entered"]
[connection signal="body_exited" from="DeathCollider" to="." method="_on_death_collider_body_exited"]
